<resources>
    <string name="app_name">NoteToCengizhanKarabel</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="description_hint">Description</string>
    <string name="settings_title">Settings</string>
    <string name="title_hint">Title</string>
    <string name="theme_light">Light</string>
    <string name="idea_text">Idea</string>
    <string name="important_text">Important</string>
    <string name="todo_text">To do</string>
    <string name="theme_dark">Dark</string>
    <string name="ok_button">OK</string>
    <string name="hello_world">Hello My World</string>
    <string name="theme_title">Theme</string>
    <string name="cancel_button">Cancel</string>
    <string name="button_done">Done</string>

    //translate
    <string name="add_new_note">Add a newnote</string>
    <string name="your_note">Yournote</string>


</resources>

